--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </head>
     <body>
         <div class="abs">
-			<h1>Hier gehts um rostige alte Autos & Katzen</h1>
-			<p>Wir beginnen mit einer Katze.</p>
-      <p>Du musst Dir unbedingt diese <a href="http://theleech.tk">Katzenseite</a> angucken.</p>
+			<h1>In den Bergen ist Freiheit</h1>
+			<p>Der Weg ist Ziel.</p>
+      <p>Wandern soweit die Füße tragen. Die große Wanderung von München nach Vendig. Wenn du mehr über diese großartige Tour erfahren willst kann in uenserem <a href="http://theleech.tk">Blogartiel</a>mehr erfahren.</p>
 		</div>
     </body>
 </html>
