--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
         <title>
-			       Rostige Käfer & Katzen
+			       Bis nach Venedig via München1
         </title>
         <meta name="description" content="Bla bla bla">
 
