--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
         <title>
-			       Bis nach Venedig via München1
+			       Bis nach Venedig via München
         </title>
         <meta name="description" content="Bla bla bla">
 
@@ -23,7 +23,7 @@
         <div class="abs">
 			<h1>In den Bergen ist Freiheit</h1>
 			<p>Der Weg ist Ziel.</p>
-      <p>Wandern soweit die Füße tragen. Die große Wanderung von München nach Vendig. Wenn du mehr über diese großartige Tour erfahren willst kann in uenserem <a href="http://theleech.tk">Blogartiel</a>mehr erfahren.</p>
+      <p>Wandern soweit die Füße tragen. Die große Wanderung von München nach Venedig. Wenn du mehr über diese großartige Tour erfahren willst in gerne in unseren<a href="http://theleech.tk">Blogartiel</a>Venedig vis München.</p>
 		</div>
     </body>
 </html>
