--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <div class="abs">
 			<h1>In den Bergen ist Freiheit</h1>
 			<p>Der Weg ist Ziel.</p>
-      <p>Wandern soweit die Füße tragen. Die große Wanderung von München nach Venedig. Wenn du mehr über diese großartige Tour erfahren willst in gerne in unseren<a href="http://theleech.tk">Blogartiel</a>Venedig vis München.</p>
+      <p>Wandern soweit die Füße tragen. Die große Wanderung von München nach Venedig.
+        Wenn du mehr über diese großartige Tour erfahren willst in gerne in unseren <a href="http://theleech.tk">Blogartikel</a> Venedig via München.</p>
 		</div>
     </body>
 </html>
