--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h1>In den Bergen ist Freiheit</h1>
 			<p>Der Weg ist Ziel.</p>
       <p>Wandern soweit die Füße tragen. Die große Wanderung von München nach Venedig.
-        Wenn du mehr über diese großartige Tour erfahren willst in gerne in unseren <a href="http://theleech.tk">Blogartikel</a> Venedig via München.</p>
+        Wenn du mehr über diese großartige Tour erfahren willst schau mal in unseren <a href="http://theleech.tk">Blogartikel Venedig via München</a>.</p>
 		</div>
     </body>
 </html>
